--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@web3-react/walletconnect-connector": "^6.1.1",
     "@web3-react/walletlink-connector": "^6.0.9",
     "ajv": "^6.12.3",
+    "antd-mobile": "5.0.0-beta.15",
+    "antd-mobile-icons": "^0.2.2",
     "cids": "^1.0.0",
     "copy-to-clipboard": "^3.2.0",
     "ethers": "^5.0.7",
